--- a/www/app/views/bookList.html
+++ b/www/app/views/bookList.html
@@ -53,4 +53,16 @@
         </table>
 
     </fieldset>
+
+
+
+    <button type="button" class="btn btn-default "  ng-disabled="nextButton" ng-click="next_question()">Next
+    </button>
+    <button type="button" class="btn btn-default" ng-disabled="previousButton"  ng-click="previous_question()" >
+        Previous
+    </button>
+
+    <div ng-show="pageNum" class="neo-order page-font pull-left" style="white-space: nowrap" >Page <span>{{page}}</span> of
+        <span>{{totalPage || 0}}</span>
+    </div>
 </div>
