User Module pagination and logout

--- a/www/app/views/addBook.html
+++ b/www/app/views/addBook.html
@@ -58,8 +58,16 @@
             </tr>
         </table>
 
+
+
     </fieldset>
     <button class="btn btn-default " ng-click="saveBookDetails()">Save</button>
 
     <div style="color: black">{{book_info}}</div>
+</div>
+
+
+<div>
+    <button class="btn btn-default " style="top: 0;position: fixed;
+  right: 0;" ng-click="logout()">LogOut</button>
 </div>
