--- a/www/app/views/addBook.html
+++ b/www/app/views/addBook.html
@@ -41,13 +41,13 @@
 
                             <tr>
                                 <td >Published Date</td>
-                                <td><input style="cursor:text;"
+                                <td><input placeholder="Date format - dd/mm/yyyy " style="cursor:text;"
                                            type="text"
                                            ng-model="bookDetails.publishedDate"></td>
                             </tr>
                             <tr>
                                 <td >Book quality</td>
-                                <td><input style="cursor:text;"
+                                <td><input placeholder="Number " style="cursor:text;"
                                            type="text"
                                            ng-model="bookDetails.quality"></td>
                             </tr>
