--- a/www/app/views/login.html
+++ b/www/app/views/login.html
@@ -2,5 +2,6 @@ Email: <input type="text" ng-model="email"><br>
 Password: <input type="password" ng-model="password"><br>
 <br>
 <button ng-click="userLogin()">Login</button>
+<button ng-click="signup()">SignUp</button>
 
 <div style="color: black">{{login_info}}</div>
