--- a/www/app/views/bookList.html
+++ b/www/app/views/bookList.html
@@ -23,15 +23,20 @@
         <legend >Book List</legend>
         <table >
             <tr>
+                <th style="padding:25px; ">Book ID</th>
                 <th style="padding:25px; ">Book Name</th>
                 <th style="padding:25px;">Published Date</th>
                 <th style="padding:25px;">Author</th>
                 <th style="padding:25px;">Quality</th>
+                <th ng-hide="deleteField" style="padding:25px;">Delete</th>
             </tr>
 
             <tr ng-repeat="list in bookList">
                 <!--<tr>-->
                 <div>
+                    <td style="padding:25px;">
+                        {{list.bookID ? list.bookID : "-"}}
+                    </td>
                     <td style="padding:25px;">
                         {{list.book ? list.book : "-"}}
                     </td>
@@ -46,6 +51,10 @@
 
                     <td style="padding:25px;">
                         {{list.quality ? list.quality : "-"}}
+                    </td>
+
+                    <td ng-hide="deleteField" style="padding:25px;">
+                        <button ng-click="deleteBook(this)"> Delete </button>
                     </td>
                 </div>
                 <!--</tr>-->
