user list pagination

--- a/www/app/views/userList.html
+++ b/www/app/views/userList.html
@@ -59,8 +59,15 @@
 
     </fieldset>
 
+
+    <button type="button" class="btn btn-default "  ng-disabled="nextButton" ng-click="next_question()">Next
+    </button>
+    <button type="button" class="btn btn-default" ng-disabled="previousButton"  ng-click="previous_question()" >
+        Previous
+    </button>
+
     <div ng-show="pageNum" class="neo-order page-font pull-left" style="white-space: nowrap" >Page <span>{{page}}</span> of
-        <span>{{Math.ceil(totalCount/limit) || 0}}</span>
+        <span>{{totalPage || 0}}</span>
     </div>
 </div>
 
