--- a/www/app/views/login.html
+++ b/www/app/views/login.html
@@ -1,7 +1,17 @@
-Email: <input type="text" ng-model="email"><br>
-Password: <input type="password" ng-model="password"><br>
+
+
+<div class="logreg-forms">
+<h1 class="h3 mb-3 font-weight-normal" style="text-align: center"> Sign in</h1>
+
+<input type="email"  ng-model="email" class="form-control" placeholder="Email address" required="" autofocus="">
+<input type="password"  ng-model="password" class="form-control" placeholder="Password" required="">
+
 <br>
-<button ng-click="userLogin()">Login</button>
-<button ng-click="signup()">SignUp</button>
+<button type="button" class="btn btn-primary" ng-click="userLogin()">Login</button>
+
+    <hr>
+<button type="button" class="btn btn-primary" ng-click="signup()">SignUp</button>
 
 <div style="color: black">{{login_info}}</div>
+
+</div>
