--- a/www/css/app.css
+++ b/www/css/app.css
@@ -11,6 +11,7 @@
 
 
 
+
 #menuButton {
     cursor: pointer;
 }
@@ -29,4 +30,11 @@
 .menuButton.active,
 .menuButton:hover {
     background: #2D89EF;
+}
+
+.logreg-forms{
+    width: 100%;
+    max-width: 410px;
+    padding: 15px;
+    margin: auto;
 }
