Book Sort by Time

--- a/www/app/views/bookList.html
+++ b/www/app/views/bookList.html
@@ -41,7 +41,7 @@
                         Book Name</a>
 
                     </th>
-                <th style="padding:25px;"><a  ng-click="orderByPublishDate('publishedDate')">
+                <th style="padding:25px;"><a  ng-click="orderByPublishDate('publisehedSec')">
                     Published Date</a>
                        </th>
                 <th style="padding:25px;">Author</th>
